src/styles/style.css
body {
	background-color: #f0f0f0;
	font-family: Arial, sans-serif;
	background-image: url("../assets/images/bg4.jpg");
	background-position: center;
	background-repeat: repeat-x;
	background-attachment: scroll;
	height: 100vh;
	color: #fff;
	padding: 30px 20px;
	display: flex;
	flex-direction: column;
	gap: 20px;
}
.search-container {
	display: flex;
	justify-content: center;
}
.search-container > .search-bar {
	width: 35vw;
	height: 40px;
	border: 1px solid #c9bdbd;
	background: none;
	border-radius: 20px 0 0 20px;
	color: #f0f0f0;
	padding: 5px 15px;
}
.search-container > .search-bar:hover {
	outline: none;
}
.search-container > .search-btn {
	background: none;
	border: none;
	width: 80px;
	border-radius: 0 20px 20px 0;
	border-right: 1px solid #c9bdbd;
	border-top: 1px solid #c9bdbd;
	border-bottom: 1px solid #c9bdbd;
	cursor: pointer;
	transition: all 0.7s;
}
.search-btn:active {
	background: pink;
	transition: all 0.3s;
}
.search-btn-text {
	color: #d1cccc;
	font-size: 2rem;
}
.main-content-container {
	display: flex;
	justify-content: center;
	align-items: center;
}
.weather-card {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 10px;
	width: 600px;
}
.weather-details {
	width: 250px;
	height: 350px;
	display: flex;
	flex-direction: column;
	gap: 10px;
	justify-content: space-around;
	align-items: center;
	box-shadow: 1px 3px 25px 0 black;
	border-radius: 20px;
}
.weather-detials-item {
	border-bottom: 1px solid #000;
	padding-bottom: 10px;
}
.icon {
	padding: 10px 20px;
}
.conditions {
	font-size: calc(6rem + 10vw);
	color: #f3eded;
}
.temperature {
	display: flex;
	gap: 20px;
	align-items: end;
	padding: 10px;
}
.temperature > .temp {
	font-size: calc(4rem + 4vw);
	font-family: dancing;
}
.temperature > .feels-like {
	font-size: 1.7rem;
	margin-bottom: 10px;
}

.location-time {
	display: flex;
	height: 100px;
	width: 100%;
	align-items: center;
	justify-content: space-around;
}
.location-icon {
	font-size: 1.6rem;
}
.location {
	display: flex;
	align-items: center;
	gap: 4px;
	font-size: 1.6rem;
}
.location-time > .time {
	font-size: 1.6rem;
}
.description {
	text-align: center;
}

